--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">PracticeApp</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Click the button.</string>
     <string name="action_settings">Settings</string>
+
+    <string name="default_button_text">NotANumber</string>
 </resources>
