--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">PracticeApp</string>
-
     <string name="hello_world">0</string>
     <string name="action_settings">Settings</string>
-
     <string name="default_button_text">NotANumber</string>
+    <string name="default_loading_text">Loading...</string>
 </resources>
