--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">PracticeApp</string>
-    <string name="hello_world">0</string>
+    <string name="hello_world">Hello world!</string>
+    <!-- Main Activity Stuff -->
     <string name="action_settings">Settings</string>
-    <string name="default_button_text">NotANumber</string>
     <string name="default_loading_text">Loading...</string>
+    <string name="title_activity_list">ListActivity</string>
+    <string name="new_activity_button_text">New activity!</string>
+    <!-- Button Stuff -->
+    <string name="default_button_text">Press Me</string>
+    <string name="button_increment">+</string>
+    <string name="button_decrement">-</string>
+    <!-- List Activity Stuff -->
+
 </resources>
